--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: BlockCMD
 main: BlockCMD\BlockCMD
 version: 1.0.0-beta
-api: [3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
+api: [3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12, 3.0.0]
 
 author: kenygamer
 description: A PocketMine-MP plugin to block certain commands from being used by players in your server
